Regression: Blur Attribute node works incorrectly with Instance Domain #108344

Closed
opened 2023-05-27 09:19:36 +02:00 by Tamil Selvan · 0 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-05-26 07:03, hash: e2a75814ac9f

Caused by: 15f464019a

Short description of error

  1. Blur attribute node when used with Instance Domain works incorrectly. The video and file atacted demonstrates the issue clearly. The node values even when the weight set to 0 are evaluated and outputs the attribute of random values.
  2. Expected result in this case should be values between 0-1 like Gradient Texture set to Spherical.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-05-26 07:03, hash: `e2a75814ac9f` Caused by: https://projects.blender.org/blender/blender/commit/15f464019a20a045efc4c62fc79382783572e98d **Short description of error** 1. Blur attribute node when used with Instance Domain works incorrectly. The video and file atacted demonstrates the issue clearly. The node values even when the weight set to 0 are evaluated and outputs the attribute of random values. 2. Expected result in this case should be values between 0-1 like Gradient Texture set to Spherical.
Tamil Selvan added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-27 09:19:37 +02:00
Iliya Katushenock self-assigned this 2023-05-27 10:45:34 +02:00
Iliya Katushenock changed title from Blur Attribute node works incorrectly with Instance Domain to Regression: Blur Attribute node works incorrectly with Instance Domain 2023-05-27 10:45:41 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-21 16:02:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108344
No description provided.