Fix #108344: default result buffer must be initially contain values

Caused by 15f464019a20a045efc4c62fc79382783572e98d.

Now make sure that the `result_buffer` is properly initialized, because
it may be used when trying to blur on an unsupported attribute domain.

Pull Request: https://projects.blender.org/blender/blender/pulls/108347