source/blender/nodes/geometry/nodes/node_geo_blur_attribute.cc
@@ -409,7 +409,7 @@ class BlurAttributeFieldInput final : public bke::GeometryFieldInput {
     VArraySpan<float> neighbor_weights = evaluator.get_evaluated<float>(1);
     GArray<> buffer_b(*type_, domain_size);
 
-    GSpan result_buffer;
+    GSpan result_buffer = buffer_a.as_span();
     switch (context.type()) {
       case GEO_COMPONENT_TYPE_MESH:
         if (ELEM(context.domain(), ATTR_DOMAIN_POINT, ATTR_DOMAIN_EDGE, ATTR_DOMAIN_FACE)) {
